🐛  Post Carousel horizontal overflow issue (#361)

--- a/src/theme/css/frontend/carousel/_carousel.scss
+++ b/src/theme/css/frontend/carousel/_carousel.scss
@@ -13,7 +13,8 @@
   }
 
   &-wrap {
-	@apply container mx-auto mt-20 mb-10;
+	@apply mx-auto mt-20 mb-10;
+	@apply w-full;
   }
 
   &-header {
