--- a/src/theme/css/frontend/fundraise/_page-header.scss
+++ b/src/theme/css/frontend/fundraise/_page-header.scss
@@ -1,7 +1,3 @@
-body.is-fundraise {
-	@apply overflow-x-hidden;
-}
-
 .is-fundraise {
   .page-header {
 	@screen md {
